src/coolcmp/unit_tests/Semantics/success/letassociativity.cl
class Goodbye {

   help(a:Int) : Int {
      let a : Int in
         6 + 7
   };

};

class Main {
	main() : Int {
		1
	};
};